--- a/spacestagram/src/App.css
+++ b/spacestagram/src/App.css
@@ -43,6 +43,7 @@
   text-align: center;
   margin: 3rem auto;
   float: none;
+  overflow: hidden;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
 }
